--- a/sussypopup.html
+++ b/sussypopup.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <button id="changeColor"></button>
+    <button id="cum"></button>
     <script src="popup.js"></script>
   </body>
 </html>
