--- a/sussypopup.html
+++ b/sussypopup.html
@@ -2,9 +2,15 @@
 <html>
   <head>
     <link rel="stylesheet" href="button.css">
+    <style>
+      .invis{
+        display:none;
+      }
+    </style>
   </head>
   <body>
     <button id="changeColor"></button>
     <script src="popup.js"></script>
+    <div></div>
   </body>
 </html>
