--- a/sussypopup.html
+++ b/sussypopup.html
@@ -10,6 +10,11 @@
   </head>
   <body>
     <button id="changeColor"></button>
+    <select name="tone" id="tone">
+      <option value="sarcasm">Sarcasm</option>
+      <option value="pos">+/-</option>
+    </select>
+    <script src="option.js"></script>
     <script src="popup.js"></script>
     <div></div>
   </body>
